--- a/projects/01_fyyur/src/templates/layouts/main.html
+++ b/projects/01_fyyur/src/templates/layouts/main.html
@@ -56,7 +56,7 @@
               {% if (request.endpoint == 'venues') or
                 (request.endpoint == 'search_venues') or
                 (request.endpoint == 'show_venue') %}
-              <form class="search" method="post" action="/venues/search">
+              <form class="search" method="get" action="/venues/search">
                 <input class="form-control"
                   type="search"
                   name="search_term"
@@ -67,7 +67,7 @@
               {% if (request.endpoint == 'artists') or
                 (request.endpoint == 'search_artists') or
                 (request.endpoint == 'show_artist') %}
-              <form class="search" method="post" action="/artists/search">
+              <form class="search" method="get" action="/artists/search">
                 <input class="form-control"
                   type="search"
                   name="search_term"
