feat: send db data to detail views  show_artist and show_venue

--- a/projects/01_fyyur/src/templates/pages/show_artist.html
+++ b/projects/01_fyyur/src/templates/pages/show_artist.html
@@ -26,11 +26,11 @@
 		<p>
 			<i class="fab fa-facebook-f"></i> {% if artist.facebook_link %}<a href="{{ artist.facebook_link }}" target="_blank">{{ artist.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
         </p>
-		{% if artist.seeking_venue %}
+		{% if artist.status %}
 		<div class="seeking">
 			<p class="lead">Currently seeking performance venues</p>
 			<div class="description">
-				<i class="fas fa-quote-left"></i> {{ artist.seeking_description }} <i class="fas fa-quote-right"></i>
+				<i class="fas fa-quote-left"></i> {{ artist.status }} <i class="fas fa-quote-right"></i>
 			</div>
 		</div>
 		{% else %}	
