--- a/projects/01_fyyur/src/templates/forms/new_venue.html
+++ b/projects/01_fyyur/src/templates/forms/new_venue.html
@@ -32,7 +32,7 @@
         <small>Ctrl+Click to select multiple</small>
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
-      
+
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
@@ -50,14 +50,27 @@
 
        <div class="form-group">
              <label for="seeking_talent">Looking for Talent</label>
-             {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
+             {{ form.seeking_talent(placeholder='Venue', autofocus = true, id='seeking') }}
        </div>
 
        <div class="form-group">
             <label for="seeking_description">Seeking Description</label>
-            {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true) }}
+            {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true, id='description') }}
        </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+
+<script>
+  const seeking = document.getElementById('seeking');
+  const description = document.getElementById('description');
+
+  seeking.addEventListener('click', (e) => {
+      if(description && e.target.checked) description.disabled = false;
+      else {
+          description.value = '';
+          description.disabled = true;
+      }
+  })
+</script>
 {% endblock %}
