--- a/projects/01_fyyur/src/templates/forms/new_artist.html
+++ b/projects/01_fyyur/src/templates/forms/new_artist.html
@@ -2,7 +2,7 @@
 {% block title %}New Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form method="post" class="form">
+    <form method="post" class="form" action="/artists/create">
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -45,14 +45,26 @@
 
           <div class="form-group">
               <label for="seeking_venue">Looking for Venues</label>
-              {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
+              {{ form.seeking_venue(placeholder='Venue', autofocus = true, id='seeking') }}
           </div>
 
           <div class="form-group">
               <label for="seeking_description">Seeking Description</label>
-              {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+              {{ form.seeking_description(class_ = 'form-control', autofocus = true, id='description') }}
             </div>
       <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+<script>
+  const seeking = document.getElementById('seeking');
+  const description = document.getElementById('description');
+
+  seeking.addEventListener('click', (e) => {
+      if(description && e.target.checked) description.disabled = false;
+      else {
+          description.value = '';
+          description.disabled = true;
+      }
+  })
+</script>
 {% endblock %}
