--- a/projects/01_fyyur/src/templates/pages/show_venue.html
+++ b/projects/01_fyyur/src/templates/pages/show_venue.html
@@ -76,6 +76,20 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<button class="btn btn-danger btn-lg" id="delete-btn" data-id="{{ venue.id }}">Delete</button>
 
+<script>
+	const deleteBtn = document.querySelector('#delete-btn');
+	deleteBtn.onclick = e => {
+		const venueId = e.target.dataset['id'];
+		fetch(`/venues/${venueId}`, {
+				method: 'DELETE',
+		})
+		.then(response => {
+			if (response.json()) {
+				window.location.replace("/");
+			}
+		})
+	}
+</script>
 {% endblock %}
-
